Sun Feb 16 14:54:50 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSplitView.m ([-mouseDown:]): Corrected offset used in
	delegate calls.  For example, in a splitview with a single
	divider, the offset used was 1, while it should be 0.

2003-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m: Upon creation of bWindow, set its level to
	pop up window level, so right click brings up the menu above
	panels etc.

Sun Feb 16 04:13:46 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSplitView.m ([-mouseDown:]): Fixed calling delegate
	method to constrain split position.  Patch By Enrico Sersale,
	with changes.

2003-02-16 04:14  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m:
	Add methods for setting and getting the extra line fragment
	information.

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Set
	the extra line fragment information as required.

	* Source/NSLayoutManager.m: Use the extra line fragment information
	to position the insertion point properly when it's placed after the
	last character in the text.

2003-02-15 18:22  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/NSTextView.h, Source/NSLayoutManager.m,
	Source/NSTextView.m: Change the way the text view is told about
	layout invalidation. Change NSTextView to update its state as
	late as possible before displaying, and make sure it's updated
	when it's resized.

2003-02-15 18:11  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSParagraphStyle.m ([NSMutableParagraphStyle
	-copyWithZone:]): Add calls to GSDebugAllocationAdd/
	GSDebugAllocationRemove when swizzling the class to keep the
	allocation counts valid.

2003-02-15 18:04  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSSpellChecker.m (-_launchSpellCheckerForLanguage:): Don't
	printf-expand the error message twice (might cause a crash if
	'language' contains a "%").
